@@ -102,7 +102,7 @@
     </dependencies>
 
     <build>
-        <plugins>    
+        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -114,8 +114,22 @@
                     <executable>${JAVA_HOME}/bin/javac</executable>
                     <compilerArgs>
                         <arg>--add-opens</arg>
+                        <arg>java.base/java.lang=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
                         <arg>java.base/java.util=ALL-UNNAMED</arg>
-                    </compilerArgs>                    
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --illegal-access=warn
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
